# SafeFold

./: .gitignore  .gitmodules  README.md  SafeFold.py  data_preprocessing.ipynb  environment.yml  go_terms_not_toxic.json  pyproject.toml  sequences.fasta  setup.sh
.ipynb_checkpoints/: Process_single_protein_FIXED-checkpoint.ipynb
DPFunc/: DPFunc.py  DPFunc_env.yml  DPFunc_pred.py  Process_single_protein_FIXED.ipynb  extract_esm_per_tok.py
DPFunc/.ipynb_checkpoints/: Process_data-checkpoint.ipynb  Process_single_protein-checkpoint.ipynb
DPFunc/processed_file/: mf_test_interpro_file.pkl  mf_test_pid_go.txt  mf_test_used_pid_list.pkl  pdb_points.pkl  pdb_seqs.pkl
DPFunc/results/: DPFunc_model_mf_0of3model.pkl  DPFunc_model_mf_1of3model.pkl  DPFunc_model_mf_2of3model.pkl  DPFunc_model_mf_final.pkl
DPFunc_fork/: DPFunc_pred.py  DPFunctional.py  Process_single_protein_FIXED.ipynb  data_processing.py
DPFunc_fork/configure/: mf.yaml
SafeFold_architecture/: __init__.py
SafeFold_architecture/DPFunc_fork/: DPFunc_main.py  DPFunc_pred.py  DPFunctional.py
SafeFold_architecture/Layers/: AlphaConnect.py  DPFunc_layer.py  ORF_detector.py
data/: Training_toxpred.ipynb  data_preprocessing.ipynb  data_processing.py  generate_training_data.py  layer4.ipynb
data/.ipynb_checkpoints/: data_preprocessing-checkpoint.ipynb
results/: esmfold_FLUF_plddt_scores.csv  esmfold_HSVT_plddt_scores.csv  esmfold_NVDK_plddt_scores.csv  esmfold_ORVJ_plddt_scores.csv
safefold/: DPfunc_adapter.py  __init__.py
safefold/Layers/: ORF_detector.py
(+5 files in other folders)
