[project]
name = "safefold"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "youremail@example.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "scikit-bio (>=0.7.2,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
